resume from 25 and activate val

--- a/srcs/experiments/default/config.json
+++ b/srcs/experiments/default/config.json
@@ -1,7 +1,7 @@
 {
   "name": "default",
-  "resume_training": false,
-  "resume_from": 34,
+  "resume_training": true,
+  "resume_from": 25,
 
   "batch_size": 6,
   "learning_rate": 0.01,
