--- a/srcs/experiments/default/config.json
+++ b/srcs/experiments/default/config.json
@@ -1,6 +1,6 @@
 {
   "name": "default",
-  "resume_training": true,
+  "resume_training": false,
   "resume_from": 26,
 
   "batch_size": 6,
@@ -10,8 +10,8 @@
   "alpha": 1.0,
   "beta": 0.1,
   "lr_decay_at": [20, 30],
-  "max_epochs": 100,
-  "save_every": 2,
+  "max_epochs": 50,
+  "save_every": 5,
   "log_every": 100,
 
   "use_bn": false,
